--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Yours",
-  "description": "Yours - NodeJS",
+  "name": "TKChat",
+  "description": "TKChat - NodeJS",
   "version": "0.0.1",
   "private": true,
   "main": "index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://adbeel92@bitbucket.org/yours-backend/yours-nodejs.git"
+    "url": "https://github.com/eduardoarenastk/TKChat.git"
   },
   "keywords": [
     "node",
@@ -24,6 +24,6 @@
     "express",
     "socket.io"
   ],
-  "license": "Yours",
+  "license": "TKChat",
   "author": "Eduardo Adbeel Arenas Albarracin"
 }
